--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Printing Output Task 2</title>
 </head>
 <body>
-    <script src="./task 2/js/index.js"></script>
+    <script src="./js/index.js"></script>
     
 </body>
 </html>
